--- a/web/src/styles/pages/orphanages-map.css
+++ b/web/src/styles/pages/orphanages-map.css
@@ -42,12 +42,31 @@
   z-index: 5;
 }
 
+#page-map .center-gps {
+  position: absolute;
+  right: 110px;
+  bottom: 40px;
+
+  z-index: 20;
+
+  width: 64px;
+  height: 64px;
+  background: #15C3D6;
+  border-radius: 20px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  transition: background-color 0.2s;
+}
+
 #page-map .create-orphanage {
   position: absolute;
   right: 40px;
   bottom: 40px;
 
-  z-index: 10;
+  z-index: 20;
 
   width: 64px;
   height: 64px;
@@ -63,4 +82,42 @@
 
 #page-map .create-orphanage:hover {
   background: #17D6ED;
+}
+
+#page-map .center-gps:hover {
+  background: #17D6ED;
+}
+
+#page-map .map-popup .leaflet-popup-content-wrapper {
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 20px;
+  box-shadow: none;
+  
+}
+
+#page-map .map-popup .leaflet-popup-content {
+  color: #0089A5;
+  font-size: 20px;
+  font-weight: bold;
+
+  margin: 8px 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#page-map .map-popup .leaflet-popup-content a {
+  width: 40px;
+  height: 40px;
+  background: #15C3D6;
+  box-shadow: 17.2868px 27.6589px 41.4884px rgba(23, 142, 166, 0.16);
+  border-radius: 12px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#page-map .map-popup .leaflet-popup-tip-container {
+  display: none;
 }
